--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Welcome to My Security Blog</h1>
+        <h1>Welcome to Tharkun Dur!</h1>
         <p>Documenting my journey in threat hunting and malware analysis.</p>
     </header>
 
@@ -23,7 +23,7 @@
         </ul>
         
         <h2>About Me</h2>
-        <p>I am a security researcher focusing on digital forensics and threat intelligence.</p>
+        <p>I am a security researcher focusing on CTI and detection engineering & threat hunting.</p>
     </main>
 
     <footer>
