--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
     <main>
         <h2>Latest Write-ups</h2>
         <ul>
-            <li><a href="#">Article 1: Phishing Analysis (Coming Soon)</a></li>
+            <li>
+                <a href="https://github.com/tharkun-intel/threat-research/blob/main/threat-research/gcash-spam-kit-analysis.md" target="_blank">
+                    Analysis: GCash Spam Kit (Phishing Campaign)
+                </a>
+            </li>
+            
             <li><a href="#">Article 2: Threat Intel Tools (Coming Soon)</a></li>
         </ul>
         
