--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Welcome to Tharkun Dur!</h1>
-        <p>Threat Analysis | Detection Engineering & Threat Hunting (DE&TH)</p>
+        <p>**Threat Analysis | Detection Engineering & Threat Hunting (DE&TH) | Cyber Threat Intel**</p>
     </header>
 
     <hr>
