--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
 
     <div class="container">
         <header>
-            <img src="gandalf.png" alt="Pixel Wizard" class="profile-pic">
+            <img src="gandalf.png" alt="The Grey Pilgrim" class="profile-pic">
 
             <h1>Tharkun Dur</h1>
             <p class="subtitle">Threat Analysis | Detection Engineering | Cyber Threat Intel</p>
         </header>
 
         <main>
-            <h2>:: Transmission Log (Latest Write-ups)</h2>
+            <h2>:: Adventure Log (Latest Write-ups)</h2>
             <ul>
                 <li>
                     <a href="https://github.com/tharkun-intel/threat-research/blob/main/threat-research/gcash-spam-kit-analysis.md" target="_blank">
@@ -121,7 +121,7 @@
                 <li><a href="#">[PENDING] Threat Intel Tools</a></li>
             </ul>
             
-            <h2>:: User Identity (About Me)</h2>
+            <h2>:: The Ring Bearer (About Me)</h2>
             <p>I am a security researcher wandering the digital wastes. Focus areas include CTI, Detection Engineering, and hunting orcs in the network.</p>
         </main>
 
