--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     </a>
                 </li>
                 
-                <li><a href="https://github.com/tharkun-intel/threat-research/blob/main/threat-research/gcash-clickjacking.hmtl"
-                        >[ANALYSIS] Gcash Clickjacking Campaign
+                <li><a href="#"
+                        >[LOADING ADVENTURE] Dwarves Incoming
                     </a>
                 </li>
             </ul>
