--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                     </a>
                 </li>
                 
-                <li><a href="https://github.com/tharkun-intel/threat-research/blob/main/threat-research/gcash-clickjacking.html"
-                        >[ANALYSIS] Gcash Clickjacking Campaign via FB Messenger
+                <li><a href="h#"
+                        >[WAITING FOR DWARVES] Smaug is Dead
                     </a>
                 </li>
             </ul>
